--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/locales/en.json":["assets/locales/en.json"],"assets/locales/es.json":["assets/locales/es.json"],"assets/locales/my.json":["assets/locales/my.json"],"assets/locales/th.json":["assets/locales/th.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
