--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "food_item",
-    "short_name": "food_item",
+    "name": "Ivi Menu",
+    "short_name": "Ivi Menu",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#1ABCB4FF",
+    "theme_color": "#1ABCB4FF",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
